# QueryNest

./: .env.example  .gitattributes  .gitignore  AGENTS.md  PROJECT_HANDOFF.md  README.md  compose.yaml  mineru-requirements.txt
backend/: langsmith_rag_eval.py  pyproject.toml
backend/app/: __init__.py  auth.py  cache.py  context_selection.py  document_parsers.py  documents.py  evaluation.py  graph.py  history.py  image_ocr.py  index.py  ingestion_cleaning.py  kb_metadata.py  main.py  memory.py  mineru_api_client.py  pdf_parse_router.py  personal_memory.py  providers.py  pymupdf_fast_parser.py  ragas_checkpoint.py  rebuild_locks.py  reranker.py  schemas.py  settings.py  tokenizer.py
backend/app/migrations/: 001_kb_metadata.sql  002_ingest_job_active_statuses.sql  003_retrieval_logs_backend_column.sql  004_chat_history.sql  005_session_memory.sql  006_auth_ownership.sql  007_auth_credentials.sql  008_application_secrets.sql  009_personal_memories.sql
backend/evaluation_data/: ragas_questions_10_chunks.csv
backend/scripts/: mineru_put_upload_repro.py  poc_milvus_bm25.py  run_postgres_migrations.py
backend/tests/: conftest.py  test_api.py  test_cache.py  test_document_parsers.py  test_evaluation.py  test_graph.py  test_history.py  test_ingest_jobs.py  test_ingestion.py  test_postgres_metadata_integration.py  test_providers.py  test_reranker.py  test_rrf.py  test_storage_metadata.py  test_storage_settings.py  test_tokenizer.py
backend/tools/: fill_expected_chunk_ids.py
docs/: milvus_bm25_poc.md  rag_storage_upgrade_report.md
frontend/: index.html  package.json  (+1 more)
(+9 files in other folders)
